chore: fixed text-overflow in download button

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -103,6 +103,7 @@ a.button {
   line-height: 25px;
   font-weight: bold;
   font-size: 15px;
+  white-space: nowrap;
   padding: 12px 8px 12px 8px;
   display: block;
   float: left;
